[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "heartbeat-logger"
version = "1.0.0"
description = "Full logging + health service for systemd services on a Raspberry Pi"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Angad Singh Personal & Non-Commercial Source Available License" }
authors = [{ name = "Angad Singh Bains" }]
keywords = ["systemd", "journald", "logging", "monitoring", "raspberry-pi"]
classifiers = [
    "License :: Other/Proprietary License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
]

# Core has no third-party runtime deps (stdlib only) so it installs cleanly on a Pi
# and stays testable off-device. The journald collector needs `systemd-python`,
# which on the Pi is best installed via apt (`sudo apt install python3-systemd`)
# rather than pip; hence it lives in an optional extra, not the base deps.
dependencies = []

[project.optional-dependencies]
# Only needed on the Pi for the real journald reader. On Raspberry Pi OS prefer
# `sudo apt install python3-systemd` over installing this extra with pip.
pi = ["systemd-python>=234"]
dev = ["pytest>=7"]

[project.scripts]
hblogd = "hblog.daemon:main"
hblog = "hblog.cli:main"

[tool.setuptools.packages.find]
include = ["hblog*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
